[metadata]
name = lektor-expression-type
description = Add jinja-evaluated types to Lektor
long_description = file: README.md, CHANGES.md
long_description_content_type = text/markdown
url = https://github.com/dairiki/lektor-expression-type/
author = Jeff Dairiki
author_email = dairiki@dairiki.org
keywords = Lektor plugin
license = BSD
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Plugins
    Environment :: Web Environment
    Framework :: Lektor
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Natural Language :: English
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
py_modules = lektor_expression_type
python_requires = >= 3.7
setup_requires =
    setuptools >= 40
    setuptools_scm

[options.entry_points]
lektor.plugins =
    expression-type = lektor_expression_type:ExpressionTypePlugin

[bdist_wheel]
universal = 1
